--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul>
         <li>
           <a href="https://www.hackerrank.com/challenges/bon-appetit"
-            >Bon Apetit ✅</a
+            >Bon Apetit ✅/❌</a
           >
         </li>
         <li>
@@ -32,7 +32,7 @@
         </li>
         <li>
           <a href="https://www.hackerrank.com/challenges/cats-and-a-mouse"
-            >Cats and Mouse ❌</a
+            >Cats and Mouse ✅</a
           >
         </li>
         <li>
@@ -70,6 +70,21 @@
         <li>
           <a href="https://www.hackerrank.com/challenges/extra-long-factorials"
             >Extra long Factorials ✅</a
+          >
+        </li>
+        <li>
+          <a href="https://www.hackerrank.com/challenges/apple-and-orange"
+            >Apple and Orange ✅</a
+          >
+        </li>
+        <li>
+          <a href="https://www.hackerrank.com/challenges/strange-advertising"
+            >Viral Advertising ❌</a
+          >
+        </li>
+        <li>
+          <a href="https://www.hackerrank.com/challenges/utopian-tree"
+            >Utopian Tree ❌</a
           >
         </li>
       </ul>
